[package]
name = "ddcore-rs"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Core features for interacting with the game Devil Daggers"
repository = "https://github.com/lsaa/ddcore-rs"
homepage = "https://github.com/lsaa/ddcore-rs"
documentation = "https://docs.rs/ddcore-rs"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
memory = ["serde_json", "process-memory", "sysinfo", "winapi", "scan_fmt"]
ddinfo = ["serde_json", "hyper", "hyper-tls", "native-tls", "futures", "base64"]
ddcl_submit = ["aes", "block-modes", "pbkdf2", "ring", "base32", "base64"]

[dependencies]
anyhow = "1.0.43"
num-traits = "0.2"
num-derive = "0.2"
bytestream = "0.4.1"
libflate = "1.1.1"
serde = { version = "1.0.60", features = ["serde_derive"] }
serde_json = { version = "1.0", optional = true }
process-memory = { version = "0.4.0", optional = true }
sysinfo = { version = "0.15.1", optional = true }
scan_fmt = {version = "0.2.6", optional = true }
hyper = { version = "0.14.12", optional = true, features = ["full"] }
hyper-tls = { version = "0.5.0", optional = true }
native-tls = { version = "0.2.8", optional = true }
aes = { version = "0.7.5", optional = true }
block-modes = { version = "0.8.1", optional = true }
pbkdf2 = { version = "0.7", default-features = false, optional = true }
ring = { version = "0.16.20", optional = true }
base32 = { version = "0.4.0", optional = true }
base64 = { version = "0.13.0", optional = true }
futures = { version = "0.3.17", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32"], optional = true }
